--- a/10 - Polymorphism - Exercise/09.Polymorphism-Exercise/09.Polymorphism-Exercise/01.Vehicles.csproj
+++ b/10 - Polymorphism - Exercise/09.Polymorphism-Exercise/09.Polymorphism-Exercise/01.Vehicles.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_09.Polymorphism_Exercise</RootNamespace>
+    <RootNamespace>Vehicles</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Factories\" />
+  </ItemGroup>
 
 </Project>
